# semares

./: .gitignore  README.md  pyproject.toml
data/camera-calibration-std/: position.csv
data/stereo-camera-cyl/: position.csv
data/stereo-camera-cyl/calibrated/: left_map1.npy  left_map2.npy  right_map1.npy  right_map2.npy  triangulate_P1.npy  triangulate_P2.npy
data/stereo-camera-real-test/: position.csv
notebooks/: calibration.ipynb  calibration_and_mcc.ipynb  image_semantic_segmentation.ipynb  kemera_vio.ipynb  kimera_vio.ipynb  llava_output_parsing.ipynb  stereo_processing.ipynb
scripts/: build-kimera-image.sh
sim/stereo-camera/controllers/python_code/: python_code.py
sim/stereo-camera/worlds/: .camera_test.wbproj  camera_test.wbt
