[tool.poetry]
name = "Semares"
version = "0.1.0"
description = "Semaresbot"
authors = ["Anton Nikonov <ant.nik.nik@mail.ru>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
jupyterlab = "^4.1.5"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
